WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132554
[iOS WK2] Compositing layers in iframes are misplaced
https://bugs.webkit.org/show_bug.cgi?id=132554
Summary
[iOS WK2] Compositing layers in iframes are misplaced
Simon Fraser (smfr)
Reported
2014-05-04 20:25:42 PDT
[iOS WK2] Compositing layers in iframes are misplaced
Attachments
Patch
(1.87 KB, patch)
2014-05-04 20:27 PDT
,
Simon Fraser (smfr)
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-04 20:27:02 PDT
Created
attachment 230805
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-04 20:27:42 PDT
<
rdar://problem/16203027
>
Simon Fraser (smfr)
Comment 3
2014-05-04 20:49:53 PDT
http://trac.webkit.org/changeset/168253
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug