[iOS WK2] Compositing layers in iframes are misplaced https://bugs.webkit.org/show_bug.cgi?id=132554 <rdar://problem/16203027>

Reviewed by Benjamin Poulain.

Have requiresScrollLayer() only consider frameView.delegatesScrolling()
for the main frame, so that iframes get scroll layers (even though they
will never scroll), so that the rest of geometry code works as on other
platforms.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresScrollLayer):

Canonical link: https://commits.webkit.org/150574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168253 268f45cc-cd09-0410-ab3c-d52691b4dbfc